<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dogecoin Monitor</string>
    <string name="title_section_currency">Currency</string>
    <string name="title_section_pool">Pool</string>
    <string name="title_section_settings">Settings</string>
    <string name="title_section_add_wallet">Add wallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="satoshi">Satoshi</string>
    <string name="sCurrencies">Local currency</string>
    <string name="sRates">Polling rate</string>
    <string name="sBackup_to_sd">Backup to SD card</string>
    <string name="sRestore">Restore from backup</string>
    <string name="donate">Donate</string>
    <string name="removeads">Remove Ads</string>
    <string name="doge_donate">Donate with Doge</string>
    <string name="donate_address">DBiU9mvEa7URSZwKdigfYr367JUDikkVRb</string>
    <string name="copy_donate_address">Copy address</string>
    <string name="manual_add_wp">Manually enter pool or address</string>
    <string name="tv_manual_add_wp">MANUAL ENTER MAY CORRUPT INTERNAL DATA</string>
    <string name="manual_entry_positive">Add</string>
    <string name="manual_entry_negative">Never mind</string>
    <string name="your_comment">Add pool or wallet manually</string>
    <string name="title_activity_remove_ads">Remove Ads</string>
    <string name="satoshi_desc">Show price in Satoshi instead of local fiat</string>
    <string name="trading_at">Doge is trading at:</string>
    <string name="worth_1000">1000 Doge is worth:</string>
    <string name="title_section_wallet">Wallets</string>

    <string name="ad_id_main">ca-app-pub-5637328886369714/7331160783 </string>
    <string name="api_fail">Block.io lookup failed</string>
    <string name="no_trades_found">No recent trades found.</string>
    <string name="error">Error</string>
    <string name="network_fail">Network failure.</string>
    <string name="refresh">Refresh</string>
    <string name="no_network">Network unavailable</string>

    <string name="wallet_total_doge_header_format">%1$fÐ in wallets</string>
    <string name="wallet_total_fiat">Total converted to %1$s</string>
    <string name="wallet_total_btc">Total converted to BTC</string>
    <string name="wallet_total_fiat_sub_format">%1$s %2$s after conversion</string>
    <string name="wallet_total_btc_sub_format">%1$s BTC after conversion</string>

    <string name="loading_wallet">Loading wallet data…</string>
    <string name="totalDogePreformat">Total Dogecoin</string>
    <string name="title_activity_help">Help</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="hello">Hello!</string>
    <string name="welcome_text">Hey, welcome to Dogecoin Monitor.\n\nIf you\'ve used this app in the past, you\'ll note some differences,
        first among them being a pretty serious facelift. You\'ll notice that things are considerably more well organized, everything looks
        a lot nicer, and some bugs and inconsistencies have been removed.\n\n

        Another thing to note is that MPOS pool support has been dropped,
        since there are no longer any MPOS pools running. If you find this to be in error, email me at helwigdev@gmail.com.
        If I get even one email, I\'ll re-add the functionality. \n\n

        As you\'re reading this, some background changes are happening to make the app
        faster and more responsive. \n\nAs always, feel free to email me at helwigdev@gmail.com, and thanks for using my app!</string>
    <string name="pref_polling">Poll for new data in the background</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="help_url">http://www.helwigdev.com/index.php/78-main/10-dogecoin-monitor-help</string>
    <string name="thanks_billing">Thanks for donating! You won\'t see any more ads.</string>
    <string name="thanks">Thanks!</string>
    <string name="title_attributions">Attributions</string>
    <string name="attributions">This app uses code from the following sources:\n\n
        <a href='https://github.com/langerhans/dogecoin-wallet-new'>Dogecoin Wallet</a> for payment integration\n\n
        <a href='https://github.com/zxing/zxing'>Zebra Crossing project</a> for QR code reading\n\n
        <a href='https://github.com/Androguide/HoloGraphLibrary'>HoloGraphLibrary</a> for graphing engine
        </string>
    <string name="pref_add_wallet_text">Add wallet by text</string>
    <string name="validate">Validate</string>

</resources>
