<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
         NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it.

    -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory android:title="App">

        <Preference android:title="@string/title_activity_help" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/help_url"/>

        </Preference>
        <ListPreference
            android:defaultValue="USD"
            android:entries="@array/supported_currencies"
            android:entryValues="@array/supported_currency_values"
            android:key="local_currency"
            android:title="@string/sCurrencies" />
        <Preference
            android:id="@+id/pref_add_by_text"
            android:key="add_text_wallet"
            android:title="@string/pref_add_wallet_text"
            />
        <!--<CheckBoxPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="isOn_polling"-->
            <!--android:title="@string/pref_polling"-->
            <!--/>-->
        <!--<ListPreference-->
            <!--android:defaultValue="60"-->
            <!--android:entries="@array/main_refresh_rates_text"-->
            <!--android:entryValues="@array/main_refresh_rates_values"-->
            <!--android:key="refreshRate"-->
            <!--android:title="@string/sRates" />-->



    </PreferenceCategory>
    <PreferenceCategory android:title="Backup / Restore"
        android:enabled="true">
        <Preference
            android:id="@+id/pref_backup"
            android:key="backup"
            android:title="@string/sBackup_to_sd" />
        <Preference
            android:key="restore"
            android:title="@string/sRestore" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Donate">
        <Preference
            android:key="donateBilling"
            android:title="@string/removeads">
            <!--<intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.helwigdev.a.dogecoinutilities.RemoveAds"
                android:targetPackage="com.helwigdev.a.dogecoinutilities" />-->
        </Preference>

        <!-- Variable monetary donation options -->
        <!-- Doge-based donate options -->
    </PreferenceCategory>
    <PreferenceCategory android:title="Other">
        <Preference
            android:key="attributions"
            android:title="@string/title_attributions"
            />
    </PreferenceCategory>

</PreferenceScreen>